--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Welcome to Lolita Active Record demo page</h1>
+<br/>
+<ul>
+  <li>
+    <h2>
+      <% unless user_signed_in? %>
+        <%=link_to "Sign in", new_user_session_path %>
+      <% else %>
+        <%=link_to "To Lolita", lolita_documents_path%>
+      <% end %>
+    </h2>
+  </li>
+  <li><%=link_to "Preview of Documents", documents_path%></li>
+  <li><%= link_to "Preview of Posts"%></li>
+</ul>
