added post index/show

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,5 +11,7 @@
     </h2>
   </li>
   <li><%=link_to "Preview of Documents", documents_path%></li>
-  <li><%= link_to "Preview of Posts"%></li>
+  <li><%= link_to "Preview of Posts", posts_path %></li>
 </ul>
+
+<p>This Demo app source is available on <a href="https://github.com/ithouse/lolita_active_record_demo">github</a>.</p>
