--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>LolitaActiveRecordDemo</title>
   <%= stylesheet_link_tag :all %>
- 
+  <%= yield :javascript %>
   <%= csrf_meta_tag %>
 </head>
 <body>
