--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,25 @@
-!!!
-%html
+!!! 5
+-# http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither
+-ie_html :class => 'no-js', :lang => 'en' do
   %head
-    %title Lolita Demo
-    = stylesheet_link_tag 'screen.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'print.css', :media => 'print'
-    /[if lt IE 8]
-      = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
-    = csrf_meta_tag
-  %body
-    %header
-      .top Lolita Demo
-    = yield
+    -# To render a different stylesheet partial inside the head (i.e. for admin layout)
+    -# just copy _stylesheets.html.haml, and point to that partial instead.
+    = render "layouts/head", :stylesheet_partial => "layouts/stylesheets"
+  
+  %body{ :class => "#{controller.controller_name}" }
+    #container
+      %header#header
+        = render "layouts/header"
+        
+      #main{ :role => 'main' }
+        .centered
+          = render "layouts/flashes"
+          %hr
+          = yield
+        
+      %footer#footer
+        .centered
+          = render "layouts/footer"
+        
+    -# Javascript at the bottom for fast page loading
+    = render "layouts/javascripts"
