šis tas sākumlapai

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,5 +8,5 @@
   .centered
     =image_tag "kosmonaut.png", :class => "kosmonaut"
     .slogan 
-      Drive-test Lolita 
+      Test-drive Lolita 
       %br and take her into outer space...
