--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -28,6 +28,11 @@
 @import "partials/media";
 
 body {background: #DDD;}
+p {
+  font: normal 14px/1.5 Arial;
+  color: #777;
+}
+.clear {clear: both;}
 
 header {
   .top {
@@ -65,17 +70,30 @@ header {
 .centered {
   width: 960px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 #main {
-  height: 1000px;
-  p, ul {
-    font: normal 11px Arial;
-    color: #777;
-  }
   h1 {
-    font: normal 24px Georgia;
+    margin-bottom: 20px;
+    font: bold 24px Arial;
     letter-spacing: -1px;
+  }
+  h2 {
+    margin: 10px 0;
+    font: bold 20px Arial;
+    letter-spacing: -0.5px;
+  }
+  .two-columns {
+    margin: 30px 0;
+  }
+  .left {
+    float: left;
+    width: 49%;
+  }
+  .right {
+    float: right;
+    width: 49%;
   }
 }
 
