Gemfile now has smart gem requirment. Bugfix for autocomplete in backend

--- a/app/views/components/posts/_tag_autocomplete.html.erb
+++ b/app/views/components/posts/_tag_autocomplete.html.erb
@@ -8,6 +8,7 @@
 			return split( term ).pop();
 		}
 
+    $("#tag_autocomplete").live("focus", function(){
 		$( "#tag_autocomplete" )
 			.bind( "keydown", function( event ) {
 				if ( event.keyCode === $.ui.keyCode.TAB &&
@@ -44,6 +45,7 @@
 					return false;
 				}
 			});
+    });
 	});
 	</script>
   <% end %>
