article design and functionality

--- a/app/assets/stylesheets/css/color_wine.css.scss
+++ b/app/assets/stylesheets/css/color_wine.css.scss
@@ -13,3 +13,7 @@
 .category_illustration{
  background: url(image-path('category_illustration_bg.jpg')) no-repeat;
  }
+
+.article_list_pagination a:hover{
+  color: #6e48cb;
+}
