--- a/app/assets/stylesheets/css/typo.css.scss
+++ b/app/assets/stylesheets/css/typo.css.scss
@@ -139,6 +139,8 @@ h5, h6, .third_menu li a:hover, .follow_us, .project_title:hover,
 .comment-reply-link, .input_middle_comments{
  color : #ffffff;
  }
+ .blog_left h1 a:hover{ color: #6e48cb}
+ 
 .content_home .testimonial_name{
  color : #6e48cb!important;
 }
