--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -7,5 +7,5 @@
         %li#menu-item-11.menu-item.menu-item-type-post_type.menu-item-object-page
           = link_to t('.About'), "#"
         %li#menu-item-12.menu-item.menu-item-type-post_type.menu-item-object-page
-          = link_to t('.News'), "#"
+          = link_to t('.News'), articles_path
       .clear
