scope un css fix

--- a/app/assets/stylesheets/css/layout.css.scss
+++ b/app/assets/stylesheets/css/layout.css.scss
@@ -1011,7 +1011,9 @@ input.submit_comment{
  padding: 0 15px 0 15px;
  float: left;
  }
- 
+ .blog_left.gallery{
+ 	margin-bottom: 30px;
+ }
 .blog_right{
  width: 280px;
  float: right;
