added home view and locale translations

--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -2,6 +2,6 @@
   %h1
     = link_to article.title, article_path(article)
   %p.subtitle
-    = article.publication_date.strftime("%A, %B %d %Y")
+    = l(article.publication_date, :format => :long)
   %p
     = truncate(article.content, :length => 255, :separator => '...').html_safe
