css for kaminari

--- a/app/assets/stylesheets/css/color_wine.css.scss
+++ b/app/assets/stylesheets/css/color_wine.css.scss
@@ -14,6 +14,16 @@
  background: url(image-path('category_illustration_bg.jpg')) no-repeat;
  }
 
-.article_list_pagination a:hover{
+nav.pagination a:hover{
   color: #6e48cb;
+}
+
+nav{display: block;}
+nav.pagination{
+  
+  clear: both;
+}
+span.page{
+  background: none;
+  display: inline;
 }
