--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     /[if lt IE 9]
       %script{:src => "http://html5shiv.googlecode.com/svn/trunk/html5.js"}
     = javascript_include_tag "application"
+    /= javascript_include_tag "tabsslider.js"
     = yield :script
     = csrf_meta_tags
     = yield :head
