added title and description to slider view

--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -5,5 +5,5 @@
         %div
           = image_tag picture.asset, :alt => "Picture"
     .project_text_right
-      %h1 Cupcake
-      %p Cupcake ipsum dolor sit amet gummi bears oat cake. Candy pie chupa chups sweet. Liquorice tiramisu danish dragée. Sweet roll lollipop powder chocolate cake gummi bears jelly-o ice cream. Danish lollipop sweet roll liquorice. Chocolate cake caramels pie fruitcake sesame snaps danish pie. 
+      %h1= picture.title.capitalize
+      %p= picture.description.capitalize
