init slider in a home page

--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -1,9 +1,9 @@
-%div{:id => "slide#{index+1}", :class => classname}
+%div{:id => "slide#{index+1}", :class => (index == 0 ? "tabb displayslide" : "tabb displaynone")}
   .project_table
     .project_screens.right
       .phones.parallax
         %div
-          = image_tag picture.asset, :alt => "Picture"
+          = image_tag(picture.asset.main, :alt => "Picture") if picture.asset?
     .project_text_right
       %h1 Cupcake
       %p Cupcake ipsum dolor sit amet gummi bears oat cake. Candy pie chupa chups sweet. Liquorice tiramisu danish dragée. Sweet roll lollipop powder chocolate cake gummi bears jelly-o ice cream. Danish lollipop sweet roll liquorice. Chocolate cake caramels pie fruitcake sesame snaps danish pie. 
