--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -5,6 +5,6 @@
         %div
           = image_tag(picture.asset.main, :alt => "Picture") if picture.asset?
     .project_text_right
-      %h1= picture.title if picture.title?
-      %p= picture.description if picture.description?
+      %h1= picture.title
+      %p= picture.description
 
