Slides only, no sliders at all

--- a/app/views/home/_slide.html.haml
+++ b/app/views/home/_slide.html.haml
@@ -3,8 +3,8 @@
     .project_screens.right
       .phones.parallax
         %div
-          = image_tag(picture.asset.main, :alt => "Picture") if picture.asset?
+          = image_tag(slide.picture.asset.main, :alt => "Picture") if slide.picture.asset?
     .project_text_right
-      %h1= picture.title
-      %p= picture.description
+      %h1= slide.title
+      %p= slide.description
 
