--- a/app/assets/stylesheets/css/typo.css.scss
+++ b/app/assets/stylesheets/css/typo.css.scss
@@ -61,7 +61,7 @@ h5, .project_title, .blog_right .widget h3{
  }
  
 h2, .content_home h5{
- font-size: 23px;
+ font-size: 21px;
  }
  
 .category_illustration h2, h1{
@@ -137,7 +137,7 @@ h5, h6, .third_menu li a:hover, .follow_us, .project_title:hover,
 .read_more:hover, .newer_articles:hover, .older_articles:hover, .input_middle, 
 .input_middle_blog, textarea, .blog_left a:hover, .blog_left h1 a:hover, .add_a_comment, 
 .comment-reply-link, .input_middle_comments{
- color : #ffffff;
+ text-decoration: underline;
  }
  .blog_left h1 a:hover{ color: #6e48cb}
  
