--- a/app/assets/stylesheets/css/layout.css.scss
+++ b/app/assets/stylesheets/css/layout.css.scss
@@ -151,6 +151,10 @@ textarea{
  margin: 0 7px 0 7px;
  }
  
+ .main_menu li.active a{
+ color: #ffffff;
+ }
+
 .homepage{
  display: block;
  width: 14px;
