--- a/app/views/shared/_sec_menu.html.haml
+++ b/app/views/shared/_sec_menu.html.haml
@@ -1,7 +1,8 @@
 .sec_menu
   .sec_menu_content
-    .social_header_links
-      .follow_us= t('.Follow us on')
-      %ul.about_social_network
-        %li
-          = link_to '', "http://www.Twitter.com/username", :class => 'twitter_header'
+    %ul.menu
+      - menu && menu.children.each_with_index do |item, index|
+        - active = item.active?(request)
+        %li.menu-item{:class => (active ? "active" : "")}
+          = link_to item.name, item.url
+
